# NIH_AIME

./: .gitignore  README.md  main.py  pyproject.toml
aime_xai/: __init__.py  core.py  core_gpu.py
linalg_example_code/: cpn_solve_example.py  pinv_solve_example.py
notebook/: AIME-CheXNet_GPU.ipynb  AIME_for_ImageData.ipynb  HuberAIME-TitanicData.ipynb  Origin_chex_AIME.ipynb  compare.ipynb  final.csv  results.txt
